# emuc

./: CMakeLists.txt  Makefile  README  client.cc  client.hh  server.cc  server.hh  svTypes.hh  tt.cc  tt.sv
csrc/: client.cc  server.cc
include/: client.hh  scCommon.cc  scCommon.hh  server.hh  shash.hh  svbit.hh
src/: client.cc  server.cc
tests/: client_hw.cc  server_hw.cc
